--- a/Html_e_CSS/Barbearia_Alura/style.css
+++ b/Html_e_CSS/Barbearia_Alura/style.css
@@ -1,36 +1,51 @@
-body{
-    background-color: rgb(204, 204, 204);
+body {
+	
 }
 
-#banner{
-    width: 100%;
+#banner {
+	width:100%;
+}
+.principal{
+	background: #CCCCCC;
+	padding: 30px;
 }
 
-.titulo-principal{
-    padding-left: 20px;
+.titulo-principal {
+	padding-left: 20px;
 }
 
-.titulo-centralizado{
-    text-align: center;
+.titulo-centralizado {
+	text-align: center
 }
 
-p{
-    text-align: center;
+p {
+	text-align: center;
 }
 
-#missao{
-    font-size: 20px;
+#missao {
+	font-size: 20px
 }
 
-em strong{
-    color: rgb(255, 0, 0);
+em strong {
+	color: #FF0000;
 }
 
-.itens{
-    font-style: italic;
-    background-color:rgb(255, 255, 255);
+.itens {
+	font-style: italic;
 }
 
-.beneficios{
-    background-color: rgb(255, 255, 255);
+.beneficios {
+	background: #FFFFFF;
+	padding: 20px;
+}
+
+ul {
+	display: inline-block;
+	vertical-align: top;
+	width: 20%;
+	margin-right: 15%;
+}
+
+.imagembeneficios {
+	width: 50%;
 }
