--- a/Html_e_CSS/Barbearia_Alura/style.css
+++ b/Html_e_CSS/Barbearia_Alura/style.css
@@ -27,63 +27,46 @@ nav a:hover{
     color: #C78C19;
     text-decoration: underline;
 }
-
-#banner {
-	width:100%;
+.produtos{
+    width: 940px;
+    margin: 0 auto;
+    padding: 50px 0;
 }
-.principal{
-	background: #CCCCCC;
-	padding: 30px;
+.produtos li{
+    display: inline-block;
+    text-align: center;
+    width: 30%;
+    vertical-align: top;
+    margin: 0 1.5%;
+    padding: 30px 20px;
+    box-sizing: border-box;
+    border: 2px solid #000000;
+    border-radius: 10px;
 }
-
-.titulo-principal {
-	padding-left: 0px;
-}
-
-.titulo-centralizado {
-	font-size: 30px;
-	font-weight: bold;
-	text-align: center;
-	margin: 20px;
-}
-
-p {
-	text-align: center;
-	font-size: 20px;
-}
-
-#missao {
-	font-size: 22px;
-	margin: 20px;
-	
-}
-
-em strong {
-	color: #FF0000;
-}
-
-.itens {
-	font-style: italic;
-}
-
-.beneficios {
-	background: #FFFFFF;
-	padding: 20px;
-}
-
-.beneficios ul {
-	display: inline-block;
-	vertical-align: top;
-	width: 20%;
-	margin-right: 15%;
-}
-.beneficios li{
-	font-size: 18px;
+.produtos li:hover{
+    color: #C78C19;
+    border-color: #C78C19;
 
 }
+.produtos li:active{
+    color: #088C19;
+    border-color: #088C19;
 
-.imagembeneficios {
-	width: 50%;
+}
+.produtos li:hover h2{
+    font-size: 34px;
+}
+.produtos h2{
+    font-size: 30px;
+    font-weight: bold;
+}
+.produto-descricao{
+    font-size: 18px;
+}
+.produto-preco{
+    font-size: 22px;
+    font-weight: bold;
+    margin-top: 10px;
 }
 footer{    
     text-align: center;
@@ -94,4 +77,52 @@ footer{
     color: #FFFFFF;
     font-size: 13px;
     margin-top: 20px;
+}
+main{
+    width: 940px;
+    margin: 0 auto;
+}
+form{
+    margin: 40px 0;
+}
+form label, form legend{
+    display: block;
+    font-size: 20px;
+    margin: 0 0 10px;
+}
+.input-padrao{
+    display: block;
+    margin: 0 0 20px;
+    padding: 10px 25px;
+    width: 50%;
+}
+.checkbox{
+    margin: 20px 0;
+}
+.enviar{
+    width: 40%;
+    padding: 15px 0;
+    background: orange;
+    font-weight: bold;
+    font-size: 18px;
+    color: #FFFFFF;
+    border-radius: 5px;
+    transition: 300ms all;
+    cursor: pointer;
+}
+.enviar:hover{
+    background: darkorange;
+    transform: scale(1.2);
+}
+table{
+    margin: 20px 0 40px;
+}
+thead{
+    background: #555555;
+    color: white;
+    font-weight: bold;
+}
+td, th{
+    border: 1px solid #000000;
+    padding: 8px 15px;
 }
