--- a/Sprint 01/style.css
+++ b/Sprint 01/style.css
@@ -1,133 +1,113 @@
-.coluna {
-    display:inline-block;
+@import url('https://fonts.googleapis.com/css2?family=Inter&display=swap');
+
+@media (max-width: 600px) {
+    section {
+      display: block;
     }
-.linhas{
-    display: grid;
-    grid-template-rows: 20px 480px 00px 20px;
+  }
+  
+  @media (min-width: 601px) {
+    section {
+      display: inline-block;
+    }
+  }
+  
+
+*{
+    font-family: 'Inter', sans-serif;
+    font-weight: 400;
+    font-size: 18px;
 }
-.linha2{
-    align-items: center;
+body{
+    font-size: 100%;
+    background: #E5E5E5;
 }
-.h3{
-    font-size: 40px;
-    font-family:Arial;
-    font-style: bolder;
-    text-decoration: none;
+.cabecalho{
+    height: 122px;
+    width: 100%;
+    background: #CCCCCC;
+}
+.cabecalho-imagem{
+    width: 31px;
+    height: 44px;
+    padding: 40px 84px 0;
+}
+.conteudo{
+    display: flex;
+    border-top: 2px solid #000000;
 
 }
-#digiteTexto{
-    position: absolute;    
-
-    width: 300px;
+.conteudo-esquerda{
+    border: 2px solid #000000;
+    
+}
+.conteudo-esquerda-txt
+.conteudo-esquerda-txt-textarea{
+    position: absolute;
+    width: 680px;
     height: 48px;
-    left: 100px;
-    top: 120px;
+    left: 240px;
+    top: 168px;
 
-    border: none;
-    font-family:'Inter';
+    font-family: 'Inter';
     font-style: normal;
     font-weight: 400;
-    font-size: 25px;
+    font-size: 32px;
     line-height: 150%;
-        
+/* identical to box height, or 48px */
+
+
+/* Dark blue/dark-blue-300 */
+
+color: #0A3871;
 }
-textarea:focus, input:focus, select:focus {
-    box-shadow: 0 0 0 0;
-    border: 0 none;
-    outline: 0;
-} 
-#digiteTexto: :active{
-    border: none;
+.conteudo-esquerda-ab
+.conteudo-esquerda-ab-a
+
+.conteudo-esquerda-ab-aviso{
 }
-
-.buttonEncode{
-
-    align-items: center;
-    justify-content: center;
-    color: #dfe8f3;
-
-    width: 250px;
-    height: 60px;
-
-    background: #00008B;
+.buttonEncode,
+ .buttonCopiar,
+  .buttonDecode,
+   .buttonApagar {
+    display: inline;
+    flex-direction: row;
+    align-items: flex-start;
+    padding: 24px;
+    gap: 8px;
+    min-width: 328px;
+    height: 67px;
+    color: #E5E5E5;
+    transition: 300ms all;
+    background: #1b5192;
     border-radius: 24px;
+}
+.buttonEncode:hover,
+ .buttonCopiar:hover,
+  .buttonDecode:hover,
+   .buttonApagar:hover {
+background: #426fa7;
+   }
+.conteudo-direita{
+    display:block;
+    border: 2px solid red;
 
     position: absolute;
-    left: 30px;
-    top: 515px;
+width: 400px;
+height: 944px;
+left: 1000px;
+top: 40px;
+
+/* White */
+
+background: #FFFFFF;
+/* shadow */
+
+box-shadow: 0px 24px 32px -8px rgba(0, 0, 0, 0.08);
+border-radius: 32px;
 }
-
-.buttonDecode{
-
+.resposta
+footer{
     align-items: center;
-    justify-content: center;
-    color: #000000;
-
-    width: 250px;
-    height: 60px;
-
-    background: #b0b0f0;
-    border-radius: 24px;
-
-    position: absolute;
-    left: 300px;
-    top: 515px;
-}
-
-.buttonCopia{
-    align-items: center;
-    justify-content: center;
-    color: #000000;
-
-    width: 250px;
-    height: 60px;
-
-    background: #b0b0f0;
-    border-radius: 24px;
-
-    position: absolute;
-    left: 670px;
-    top: 515px;
-}
-
-.paragrafo-aviso{
-
-width: 228px;
-height: 18px;
-
-font-family: 'Inter';
-font-style: normal;
-font-weight: 400;
-font-size: 12px;
-line-height: 150%;
-
-color: #495057;
-opacity: 0.8;
-
-position: absolute;
-    left: 40px;
-    top: 490px;
-}
-
-.retangulo1 {
-    position: absolute;
-    align-items:center;
     text-align: center;
-    justify-content: center;
-
-    width: 400px;
-    height: 600px;
-    left: 800px;
-    top: 0px;
-
-    background: #FFFFFF;
-    box-shadow: 0px 24px 32px -8px rgba(0, 0, 0, 0.08);
-    border-color: #00008B;
-    border-radius: 32px;
-}
-.criador{
-    display: flex;
-    align-items:center;
-    text-align: center;
-    justify-content: center;
 }
