--- a/Html_e_CSS/Barbearia_Alura/style-home.css
+++ b/Html_e_CSS/Barbearia_Alura/style-home.css
@@ -1,68 +1,34 @@
-header{
-    background: #BBBBBB;
-    padding: 20px 0;
-}
-.caixa{
-    position: relative;
-    width: 940px;
-    margin: 0 auto;
-}
-nav{
-    position: absolute;
-    top: 110px;
-    right: 0px;
-}
-nav li{
-    display: inline;
-    margin: 0 0 0 15px;
-}
-nav a{
-    text-transform: uppercase;
-    color: #000000;
-    font-weight: bold;
-    font-size:  22px;
-    text-decoration: none;
-}
-nav a:hover{
-    color: #C78C19;
-    text-decoration: underline;
-}
-
 #banner {
 	width:100%;
 }
+
 .principal{
 	background: #CCCCCC;
 	padding: 30px;
 }
 
 .titulo-principal {
-	padding-left: 0px;
+	padding-left: 20px;
 }
 
 .titulo-centralizado {
-	font-size: 30px;
-	font-weight: bold;
-	text-align: center;
-	margin: 20px;
+	text-align: center
 }
 
 p {
 	text-align: center;
-	font-size: 20px;
 }
 
 #missao {
-	font-size: 22px;
-	margin: 20px;
-	
+	font-size: 20px
 }
+
 em strong {
 	color: #FF0000;
 }
 
 .itens {
-	font-style: italic;
+	font-style: italic
 }
 
 .beneficios {
@@ -70,27 +36,13 @@ em strong {
 	padding: 20px;
 }
 
-.beneficios ul {
+ul {
 	display: inline-block;
 	vertical-align: top;
 	width: 20%;
 	margin-right: 15%;
 }
-.beneficios li{
-	font-size: 18px;
-
-}
 
 .imagembeneficios {
 	width: 50%;
-}
-footer{    
-    text-align: center;
-    background: url("bg.jpg");
-    padding: 40px 0px;
-}
-.copyright{
-    color: #FFFFFF;
-    font-size: 13px;
-    margin-top: 20px;
 }
