--- a/Sprint 01/style.css
+++ b/Sprint 01/style.css
@@ -1,113 +1,201 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter&display=swap');
+@media (max-width: 480) {
 
-@media (max-width: 600px) {
-    section {
-      display: block;
-    }
-  }
-  
-  @media (min-width: 601px) {
-    section {
-      display: inline-block;
-    }
-  }
-  
-
-*{
-    font-family: 'Inter', sans-serif;
-    font-weight: 400;
-    font-size: 18px;
+    
 }
 body{
-    font-size: 100%;
-    background: #E5E5E5;
-}
-.cabecalho{
-    height: 122px;
-    width: 100%;
-    background: #CCCCCC;
-}
+    background: #E9ECF8;}
+.cabecalho
 .cabecalho-imagem{
     width: 31px;
     height: 44px;
     padding: 40px 84px 0;
+    transition: 300ms all;
 }
 .conteudo{
-    display: flex;
     border-top: 2px solid #000000;
 
 }
 .conteudo-esquerda{
-    border: 2px solid #000000;
-    
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 24px;
+    gap: 8px;
+    border: 2px solid #030a12;
+    max-width: 50%;
+    height: 900px;
 }
-.conteudo-esquerda-txt
-.conteudo-esquerda-txt-textarea{
-    position: absolute;
+
+.texto-input{
+    border: none;
+    font-size: 28px;
+    margin: 3em 5em 3em;
+    background: none;
+}
+.texto-input:focus,input:focus, select:focus{
+    border: 0 none;
+    outline: 0;
+}
+.aviso{
+    display: flex;
+    flex-direction: row;
     width: 680px;
     height: 48px;
-    left: 240px;
-    top: 168px;
 
     font-family: 'Inter';
     font-style: normal;
     font-weight: 400;
     font-size: 32px;
     line-height: 150%;
-/* identical to box height, or 48px */
 
-
-/* Dark blue/dark-blue-300 */
-
-color: #0A3871;
+    color: #0A3871;
 }
-.conteudo-esquerda-ab
-.conteudo-esquerda-ab-a
-
-.conteudo-esquerda-ab-aviso{
+.img-aviso{
+    width: 16px;
 }
-.buttonEncode,
- .buttonCopiar,
-  .buttonDecode,
-   .buttonApagar {
-    display: inline;
+.aviso-texto{
+    width: 228px;
+    height: 18px;
+
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 150%;
+
+    color: #495057;
+
+    opacity: 0.8;
+}
+.botoes{
+    display: flex;
     flex-direction: row;
-    align-items: flex-start;
+    align-items: flex-end;
     padding: 24px;
-    gap: 8px;
-    min-width: 328px;
-    height: 67px;
-    color: #E5E5E5;
-    transition: 300ms all;
-    background: #1b5192;
-    border-radius: 24px;
+    gap: 18px;
 }
-.buttonEncode:hover,
+.buttonEncode{
+    width: 328px;
+    height: 67px;
+    background: #0A3871;
+    border-radius: 24px;
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 22px;
+    line-height: 19px;
+    text-align: center;
+    color: #FFFFFF;
+}
+.buttonDecode{
+    width: 328px;
+    height: 67px;
+    box-sizing: border-box;
+    border: 1px solid #0A3871;
+    border-radius: 24px;
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 22px;
+    line-height: 19px;
+    text-align: center;
+}
+.buttonEncode:hover, 
+ .buttonDecode:hover,
  .buttonCopiar:hover,
-  .buttonDecode:hover,
-   .buttonApagar:hover {
-background: #426fa7;
-   }
+   .cabecalho-imagem:hover{
+    opacity: 0.5;
+}
+
+.aviso{
+    height: 18px;
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 150%;
+    color: #495057;
+    margin: -2em 3em;
+
+    opacity: 0.8;
+}
+
+
 .conteudo-direita{
-    display:block;
-    border: 2px solid red;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    /* Rectangle 1 */
+
 
     position: absolute;
-width: 400px;
-height: 944px;
-left: 1000px;
-top: 40px;
+    width: 400px;
+    height: 944px;
+    left: 1000px;
+    top: 40px;
 
-/* White */
+    /* White */
 
-background: #FFFFFF;
-/* shadow */
+    background: #FFFFFF;
+    /* shadow */
 
-box-shadow: 0px 24px 32px -8px rgba(0, 0, 0, 0.08);
-border-radius: 32px;
+    box-shadow: 0px 24px 32px -8px rgba(0, 0, 0, 0.08);
+    border-radius: 32px;
 }
-.resposta
-footer{
-    align-items: center;
+.img-direita{
+    /* High quality products 1 1 */
+    padding: 0 15%;
+    width: 336px;
+    height: 304px;
+    left: 1032px;
+    top: 283px;
+}
+
+.resposta{
+    margin: 0 5%;
+    width: 90%;
+    height: 58px;
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 120%;
     text-align: center;
+    color: #343A40;
+    border: none;
+}
+.resposta:focus, input:focus, select:focus{
+    border: 0 none;
+    outline: 0;
+}
+.botoes-direita{
+}
+.buttonCopiar {
+    width: 328px;
+    height: 67px;
+    background: #0A3871;
+    border-radius: 24px;
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 22px;
+    line-height: 19px;
+    text-align: center;
+    color: #FFFFFF;
+}
+ .buttonCopiar:hover{
+background: #426fa7;
+}
+.rodape{
+    display: flex;
+    align-items: center;
+    width: 100%;
+    display: inline;
+    border-top: #000000;
+}
+.criador{
+    text-align: center;
+}
+.criador-img{
 }
