--- a/Sprint 01/style.css
+++ b/Sprint 01/style.css
@@ -1,37 +1,47 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter&display=swap');
 @media (max-width: 480) {
-
+    .conteudo-esquerda{
+        width: 100%;
+    }
     
 }
+
 body{
-    background: #E9ECF8;}
-.cabecalho
+    background: #E9ECF8;
+}
+.cabecalho{
+    border: 6px solid #ff0303;
+    width: 100%;
+}
 .cabecalho-imagem{
     width: 31px;
     height: 44px;
     padding: 40px 84px 0;
     transition: 300ms all;
 }
-.conteudo{
-    border-top: 2px solid #000000;
 
+.conteudo{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    border: 10px solid #8102ff;
 }
 .conteudo-esquerda{
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
-    padding: 24px;
-    gap: 8px;
-    border: 2px solid #030a12;
-    max-width: 50%;
-    height: 900px;
+    align-content: space-between;
+    justify-content: center;
+    border: 10px solid #030a12;
+    max-width: 100%;
 }
 
 .texto-input{
     border: none;
     font-size: 28px;
-    margin: 3em 5em 3em;
     background: none;
+    height: 480px;
+}
+.btna{
+    margin-top: 80px;
 }
 .texto-input:focus,input:focus, select:focus{
     border: 0 none;
@@ -47,7 +57,6 @@ body{
     font-style: normal;
     font-weight: 400;
     font-size: 32px;
-    line-height: 150%;
 
     color: #0A3871;
 }
@@ -60,46 +69,41 @@ body{
 
     font-family: 'Inter';
     font-style: normal;
-    font-weight: 400;
     font-size: 12px;
-    line-height: 150%;
 
     color: #495057;
 
-    opacity: 0.8;
+    opacity: 0.9;
 }
 .botoes{
-    display: flex;
-    flex-direction: row;
-    align-items: flex-end;
+    display:flex;
+    flex-wrap: wrap;
+    justify-content: center;
     padding: 24px;
     gap: 18px;
-}
+    border: 10px solid #ff0303;
+    }
 .buttonEncode{
-    width: 328px;
+    min-width: 328px;
     height: 67px;
     background: #0A3871;
     border-radius: 24px;
     font-family: 'Inter';
     font-style: normal;
-    font-weight: 400;
     font-size: 22px;
-    line-height: 19px;
-    text-align: center;
     color: #FFFFFF;
+    border: 10px solid #ff0303;
+
 }
 .buttonDecode{
-    width: 328px;
+    min-width: 328px;
     height: 67px;
     box-sizing: border-box;
     border: 1px solid #0A3871;
     border-radius: 24px;
     font-family: 'Inter';
     font-style: normal;
-    font-weight: 400;
     font-size: 22px;
-    line-height: 19px;
-    text-align: center;
 }
 .buttonEncode:hover, 
  .buttonDecode:hover,
@@ -125,52 +129,56 @@ body{
 .conteudo-direita{
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
+    border: 10px solid #ffffff;
+    align-items: center;
+    max-width: 600px;
+}
+.caixa{
+    display: flex;
+    flex-direction: column;
+    align-content: space-between;
     align-items: center;
     /* Rectangle 1 */
 
 
-    position: absolute;
-    width: 400px;
-    height: 944px;
-    left: 1000px;
-    top: 40px;
-
-    /* White */
-
+    
+    
     background: #FFFFFF;
     /* shadow */
 
     box-shadow: 0px 24px 32px -8px rgba(0, 0, 0, 0.08);
     border-radius: 32px;
+
 }
 .img-direita{
     /* High quality products 1 1 */
-    padding: 0 15%;
+    padding-top: 15em;
     width: 336px;
     height: 304px;
-    left: 1032px;
-    top: 283px;
 }
 
 .resposta{
-    margin: 0 5%;
-    width: 90%;
-    height: 58px;
+    font-size: 28px;
+    background: none;
+    height: 480px;
+    width: 100%;
+    height: 158px;
     font-family: 'Inter';
-    font-style: normal;
     font-weight: 700;
-    font-size: 24px;
-    line-height: 120%;
     text-align: center;
     color: #343A40;
     border: none;
+    margin-top: 3em;
 }
 .resposta:focus, input:focus, select:focus{
     border: 0 none;
     outline: 0;
 }
 .botoes-direita{
+    border: 10px solid #ff0303;
 }
+
 .buttonCopiar {
     width: 328px;
     height: 67px;
@@ -183,19 +191,27 @@ body{
     line-height: 19px;
     text-align: center;
     color: #FFFFFF;
+    margin-bottom: 0;
 }
  .buttonCopiar:hover{
 background: #426fa7;
 }
 .rodape{
     display: flex;
+    justify-content: center;
     align-items: center;
     width: 100%;
-    display: inline;
-    border-top: #000000;
+    height: 50px;
+    border: 20px solid #000000;
 }
 .criador{
+    font-family: 'Inter';
+    font-size: 22px;
+    font-style: italic;
     text-align: center;
 }
 .criador-img{
+    height: 50px;
+    margin-left: 1em;
 }
+
