--- a/Sprint 01/2style.css
+++ b/Sprint 01/2style.css
@@ -1,22 +1,24 @@
 *{
-    background: rgb(255, 225, 0);
     font-size: 18px;
     font-family: 'Inter';
     font-weight: bold;
     color: #000000;
-
+    background: #fdac1f;
 }
+
 .cabecalho{
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
     align-items: center;
     justify-content: space-between;
     padding: 1em;
-    border: 5px solid #000000;
+    border-bottom: 2px solid #000000;
 }
 .cabecalho > img{
     height: 1.4em;
     padding: 0.5em;
+    fill: black;
 }
 .cabecalho > P{
     font-family: 'Inter';
@@ -26,7 +28,6 @@
 .conteudo{
     display: flex;
     flex-direction: column;
-    border: 5 solid #000000;
 }
 .conteudo-esquerda{
     display: flex;
@@ -37,9 +38,14 @@
 .texto-input{
     border: none;
     height: 280px;
-    margin-top: 0;
+    margin-top: 10px;
     text-align: center;
     font-size: 1em;
+    background: none;
+}
+.texto-input:focus,input:focus, select:focus{
+    border: 0 none;
+    outline: 0;
 }
 .btna{
     display: flex;
@@ -64,18 +70,16 @@
     gap: 10px;
 }
 #encode, #decode, #copiar{
-    width: 328px;
-    height: 67px;
+    width: 250px;
+    height: 30px;
     background: #000000;
     border-radius: 24px;
     color: #CCCCCC;
-    font: 1em;
 }
 .conteudo-direita{
     display: flex;
     flex-direction: column;
     justify-content: center;
-    border: 5 solid #CCCCCC;
 }
 .caixa{
     display: flex;
@@ -85,13 +89,19 @@
 }
 .resposta{
     border: none;
+    background: none;
     height: 200px;
     margin-top: 0;
     text-align: center;
     font-size: 1em;
     width: 100%;
 }
+.resposta:focus,input:focus, select:focus{
+    border: 0 none;
+    outline: 0;
+}
 .img-direita{
+    display: none;
     height: 150px;
 }
 .rodape{
@@ -104,9 +114,60 @@
 .rodape > img{
     margin: 1em;
 }
-@media (min-width: 481){
+@media (min-width: 481px) and (max-width: 1024px) {
+    .cabecalho{
+        padding: 10px;
+        justify-content: space-around;
+    }
     .conteudo{
-        display: inline;
+        display: flex;
         flex-direction: row;
+        justify-content: space-around;
+
+    }
+    .texto-input, .resposta{
+        width: auto;
+    }
+    .conteudo-direita{
+        width: 40%;
+        justify-content: space-between;
+    }
+    .conteudo-direita, .conteudo-esquerda{
+        height: 280px;
+        width: 100%;
+    }
+    .botoes{
+        display: flex;
+        flex-direction: column;;
+    }
+    .img-direita{
+        display: none;
+    }
+    
+}
+@media (min-width: 1025px){
+    .cabecalho{
+        margin: 0 100px;
+    }
+    .conteudo{
+        flex-direction: row;
+        justify-content: space-around;
+    }
+    .conteudo-direita, .conteudo-esquerda{
+        margin-top: 20px;
+        height: 750px;
+        width: 80%;
+        margin: 0 5%;
+        justify-content: space-around;
+    }
+    .texto-input, .resposta{
+        font-size: 1.5em;
+        width: auto;
+    }
+    .botoes{
+        flex-direction: row;
+    }
+    #encode, #decode, #copiar{
+        height: 60px;
     }
 }
