--- a/Sprint 01/2style.css
+++ b/Sprint 01/2style.css
@@ -13,17 +13,21 @@
     align-items: center;
     justify-content: space-between;
     padding: 1em;
+    margin: 0 25px;
     border-bottom: 2px solid #000000;
 }
 .cabecalho > img{
     height: 1.4em;
     padding: 0.5em;
+    cursor: pointer;
     fill: black;
 }
 .cabecalho > P{
     font-family: 'Inter';
     font-weight: 400;
     font-weight: bold;
+    padding: 5px;
+    cursor: pointer;
 }
 .conteudo{
     display: flex;
@@ -111,13 +115,13 @@
     justify-content: center;
     padding: 10px;
 }
-.rodape > img{
+.rodape > a{
     margin: 1em;
 }
 @media (min-width: 481px) and (max-width: 1024px) {
     .cabecalho{
-        padding: 10px;
-        justify-content: space-around;
+        justify-content: space-between;
+        margin: 0 50px;
     }
     .conteudo{
         display: flex;
